<resources>
    <string name="app_name">tema</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>



    <string name="student_id">ID: </string>
    <string name="student_name">name(text): </string>
    <string name="student_graduated">graduated(bool): </string>
    <string name="student_grade">grade(int): </string>
    <string name="student_enrollment">enrollment(date): </string>
    <string name="student_version">version(int): </string>

    <string name="inactive_network">offline</string>
    <string name="active_network">online</string>
</resources>