<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/StudentListFragment">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.ubb_pdm.catalin_vancea.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/StudentListFragment"
        android:name="com.ubb_pdm.catalin_vancea.todo.students.StudentListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_student_list">

        <action
            android:id="@+id/action_StudentListFragment_to_StudentEditFragment"
            app:destination="@id/StudentEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/StudentEditFragment"
        android:name="com.ubb_pdm.catalin_vancea.todo.student.StudentEditFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_student_edit">

        <action
            android:id="@+id/action_StudentEditFragment_to_StudentListFragment"
            app:destination="@id/StudentListFragment" />
    </fragment>
</navigation>